[gd_scene load_steps=6 format=2]

[ext_resource path="res://Particles2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemy3.gd" type="Script" id=2]
[ext_resource path="res://pics/Bearly.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0416

[sub_resource type="CircleShape2D" id=2]
radius = 16.0312

[node name="enemy3" type="Node2D"]
script = ExtResource( 2 )

[node name="hit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit"]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Particles2D" parent="." instance=ExtResource( 1 )]

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="mouse_entered" from="hit" to="." method="_on_hit_mouse_entered"]
[connection signal="mouse_exited" from="hit" to="." method="_on_hit_mouse_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
